Second Commit Test
This 2nd Commit

--- a/app/views/test_git/index.html.erb
+++ b/app/views/test_git/index.html.erb
@@ -1,2 +1,3 @@
-<h1>TestGit#index</h1>
-<p>Find me in app/views/test_git/index.html.erb</p>
+<h1>This Is My First Rails Project</h1>
+<p>Creator Amalendu Samanta</p>
+<p>Email:- amalendu4u@gmail.com</p>
